# cv-rag-chatbot

./: .gitattributes  .gitignore  app.py  pyproject.toml  requirements.txt
